# crossplane-fn-sdk-rs-unofficial

./: README.md  deny.toml
.github/workflows/: release.yaml
codegen/: Cargo.toml  README.md
codegen/src/: main.rs
example/: Cargo.toml  Dockerfile  build.rs
example/local_test/: run.sh
example/local_test/function/: crossplane.yaml
example/schema/: xrd.yaml
example/src/: main.rs
sdk/: CHANGELOG.md  Cargo.toml
sdk/src/: lib.rs  map_resource.rs  server.rs
