[package]
name = "crossplane-fn-sdk-unofficial"
version = "0.4.0"
edition = "2024"
description = "A sdk to write Crossplane composite functions in Rust. Technically composite functions are basically gRPC server."
repository = "https://github.com/ngergs/crossplane-fn-sdk-rs-unofficial"
license = "MIT"
readme = "README.md"

[lints.clippy]
pedantic = "warn"

[features]
default = []
# Adds blanket implementation for `TryFromResource` and `TryIntoResource` for Kubernetes objects.
k8s-openapi = ["dep:k8s-openapi"]

[dependencies]
# IO
tonic = { version = "0.14.2", features = ["tls-aws-lc"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
# Generated code from crossplane protobuf
prost = "0.14.1"
prost-types = "0.14.1"
prost-wkt-types = "0.7.0"
tonic-prost = "0.14.2"
serde = "1.0.228"
serde_json = "1.0.145"
# type mapping validation
serde_ignored = "0.1.14"
# cli
clap = { version = "4.5.51", features = ["derive", "env"] }
# K8s
k8s-openapi = { version = "0.26.0", optional = true }

[dev-dependencies]
tokio-test = { version = "0.4.4" }
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
